--- a/apps/start-page/src/styles.scss
+++ b/apps/start-page/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@csstools/normalize.css/opinionated.css';
+
+body,
+#root {
+  height: 100vh;
+}
