feat(home): add basic home and about pages

--- a/apps/home/src/styles.scss
+++ b/apps/home/src/styles.scss
@@ -1,1 +1,8 @@
 @import '@csstools/normalize.css/opinionated.css';
+
+body {
+  height: 100vh;
+  overflow-x: hidden;
+
+  font-family: 'Rubik', sans-serif;
+}
