--- a/apps/home/src/app/error-page/error-page.module.scss
+++ b/apps/home/src/app/error-page/error-page.module.scss
@@ -1,10 +1,7 @@
 .container {
-  position: 'relative';
-}
-
-.profile-section {
   display: flex;
-  min-height: calc(100vh - 64px);
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
