--- a/libs/common-ui/src/lib/header/header.module.scss
+++ b/libs/common-ui/src/lib/header/header.module.scss
@@ -1,3 +1,5 @@
+$bg: rgba(0, 0, 0, 0.8);
+
 .container {
   padding: 0 24px;
   height: 64px;
@@ -5,14 +7,16 @@
   display: flex;
   align-items: center;
 
-  background-color: rgba(0, 0, 0, 0.8);
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.8);
+  background-color: $bg;
+  box-shadow: 0 10px 10px $bg;
 
   color: white;
 
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.6;
+
+  position: relative;
 }
 
 .title {
