--- a/apps/home/src/app/app.module.scss
+++ b/apps/home/src/app/app.module.scss
@@ -1,10 +1,25 @@
 .container {
-  position: 'relative';
+  position: relative;
 }
 
 .profile-section {
   display: flex;
-  min-height: calc(100vh - 64px);
+  min-height: 0;
   align-items: center;
   justify-content: center;
+  transition: min-height 1s;
+
+  &.full-height {
+    min-height: calc(100vh - 64px);
+  }
+}
+
+main,
+.profile-section {
+  position: relative;
+  pointer-events: none;
+}
+
+main :not(.profile-section) {
+  pointer-events: auto;
 }
