fix(home): only show hover on desktop
Hover does not work on touch screen devices so only enable it for devices that support it.

--- a/apps/home/src/app/hex-background/hex-background.module.scss
+++ b/apps/home/src/app/hex-background/hex-background.module.scss
@@ -71,9 +71,11 @@ $offset: $short-diagonal + (4 * $margin-vertical) - 2px;
     margin-bottom: calc($margin-vertical - 0.5 * $short-diagonal);
     background-color: #000;
     cursor: pointer;
+  }
+}
 
-    &:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-    }
+@media (hover: hover) {
+  .hex:hover {
+    background-color: rgba(255, 255, 255, 0.3);
   }
 }
